--- a/FinG1App/output_grafana1/provisioning/dashboards.yaml
+++ b/FinG1App/output_grafana1/provisioning/dashboards.yaml
@@ -1,11 +1,11 @@
 apiVersion: 1
 
 providers:
-  - name: 'default'
+  - name: 'aim dashboard'
     orgId: 1
     folder: ''
     type: file
     disableDeletion: false
-    updateIntervalSeconds: 30
+    editable: true
     options:
       path: /etc/grafana/provisioning/dashboards
